<resources>
    <string name="app_name">Calculator</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="text_point">.</string>
    <string name="text_0">0</string>
    <string name="text_c">C</string>
    <string name="text_plus">+</string>
    <string name="text_minus">-</string>
    <string name="text_multiplication">x</string>
    <string name="text_division">/</string>
    <string name="text_equal">=</string>
    <string name="text_change">+/-</string>
    <string name="text_percent">%</string>
    <string name="letter_k">K</string>
    <string name="letter_h">H</string>
    <string name="letter_l">L</string>
    <string name="letter_y">Y</string>
    <string name="letter_s">S</string>
    <string name="letter_t">T</string>
    <string name="letter_o">O</string>
    <string name="letter_v">V</string>
</resources>
